Fix footer logo alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -424,20 +424,9 @@ img#bottomlead {
 }
 
 .button {
-	/*
-	border: 2px solid white;
-	display: inline-block;*/
 	padding: 10px 30px 10px 30px;
 	text-align: center;
-	/*
-	text-decoration: none;
-	color: white;*/
 }
-
-/*.button:hover{
-	background-color: white;
-	color: #345673;
-}*/
 
 .headshot {
 	margin-bottom: 0px;
@@ -542,6 +531,10 @@ form img {
 	margin-top: 0 !important;
 	padding-top: 0 !important;
 	width: 100% !important;
+}
+
+#footer-hc-logo {
+	margin-top: -15px;
 }
 
 /*************************************/
